--- a/aula12ex/ex014/estilo.css
+++ b/aula12ex/ex014/estilo.css
@@ -19,6 +19,11 @@ section {
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.363);
 }
 
+div {
+    text-align: center;
+    padding: 8px;
+}
+
 footer {
     color: white;
     text-align: center;
